# artery-font-format

./: CMakeLists.txt
artery-font/: crc32.hpp  serialization.hpp  stdio-serialization.hpp
cmake/: artery-font-config.cmake.in
